--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <div class="container">
                 <a href="#" class="navbar-brand">The Great Outdoors</a>
 
-                <div class="collapse navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation"><span class="nav-toggler-icon"></span></button>
+
+                <div class="collapse navbar-collapse" id="navigation">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a href="#home" class="nav-link">Home</a>
