Add mission statement

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <title></title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <!-- Navigation menu -->
+        <nav class="navbar navbar-expand-lg bg-warning navbar-light py-2">
             <div class="container">
-                <a href="#" class="navbar-brand">The Great Outdoors</a>
+                <a href="#" class="navbar-brand">Get out of town</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation"><span class="nav-toggler-icon"></span></button>
 
@@ -39,5 +40,35 @@
                 </div>
             </div>
         </nav>
+        <section id="home" class="bg-dark text-light p-5 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>Teach the new generation about human <span class="text-success">nature</span>  through nature itself</h1>
+                        <p class="lead my-4">At Get out of town, we are dedicated to connecting younger generations with the natural world, fostering environmental stewardship, and inspiring a lifelong love for the outdoors.</p>
+                        <button class="btn btn-primary btn-lg">Donate!</button>
+                    </div>
+                    <img class="img-fluid w-50 d-none d-sm-block" src="images/undraw_moonlight_ctir.svg" alt="night time outdoors">
+                </div>
+            </div>
+        </section>
+        <section id="mission" class="bg-warning text-dark p-4">
+            <div class="container">
+                <div class="justify-content-between align-items-center">
+                    <h2 class="mb-3 mb-md-0 text-center">Our Goal</h2>
+                    <p class="lead text-center">Our mission is to empower youth to explore, appreciate, and protect nature by providing opportunities to engage with the outdoors in meaningful ways. We strive to make nature accessible, impactful, and a central part of youth development.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Programs -->
+         <section class="p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">123</div>
+                    <div class="col">123</div>
+                    <div class="col">123</div>
+                </div>
+            </div>
+         </section>
     </body>
 </html>
