--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
         <title></title>
     </head>
     <body>
@@ -61,14 +62,51 @@
             </div>
         </section>
         <!-- Programs -->
-         <section class="p-5">
+         <section class="p-5 bg-secondary">
             <div class="container">
-                <div class="row">
-                    <div class="col">123</div>
-                    <div class="col">123</div>
-                    <div class="col">123</div>
+                <div class="row text-center">
+                    <div class="col-md">
+                        <div class="card bg-dark text-light">
+                            <div class="card-body text-center">
+
+                                <div class="h1 mb-3">
+                                    <i class="bi bi-tree-fill"></i>
+                                    <h3 class="card-title">Expeditions</h3>
+                                    <p class="card-text">
+                                        Guided camping and hiking trips that immerse young participants in nature while fostering teamwork, leadership, and environmental education.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="card bg-dark text-light">
+                            <div class="card-body text-center">
+
+                                <div class="h1 mb-3">
+                                    <i class="bi bi-hammer"></i>
+                                    <h3 class="card-title">Workshops</h3>
+                                    <p class="card-text">
+                                        Interactive programs focused on sustainability, conservation, and climate change, designed to empower young people to take action in their communities.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
          </section>
+         <!-- About -->
+          <section id="about" class="p-5 bg-secondary">
+            <div class="container">
+                <div class="row align-items justify-content-between">
+                    <div class="col-md"></div>
+                    <div class="col-md">
+                        
+                    </div>
+                </div>
+            </div>
+
+          </section>
     </body>
 </html>
