flesh out about us and team members

--- a/index.html
+++ b/index.html
@@ -100,13 +100,55 @@
           <section id="about" class="p-5 bg-secondary">
             <div class="container">
                 <div class="row align-items justify-content-between">
-                    <div class="col-md"></div>
                     <div class="col-md">
-                        
+                        <img src="images/undraw_camping_1hz9.svg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md">
+                        <h2>About Us</h2>
+                        <p class="lead">We believe that meaningful connections with nature help young people develop a sense of responsibility for the environment and a deeper understanding of the world around them.</p>
+                        <p>Our organization was founded in by a group of passionate environmentalists and educators who recognized the growing need to connect young generations with the natural world. As technology and urbanization continue to shape our lives, we saw a decline in outdoor experiences for youth, especially for those in under privileged communities. Our founders set out to bridge this gap by offering educational outdoor programs that help young people build environmental awareness, teamwork, and leadership skills./p>
                     </div>
                 </div>
             </div>
 
           </section>
+<section id="theTeam" class="p-5 bg-dark">
+    <div class="container">
+        <div class="row justify-content-center">
+            <!-- Team Member 1 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-75">
+                    <img src="images/pexels-a-darmel-7322239.jpg" class="card-img-top h-100" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Founder</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Team Member 2 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-75">
+                    <img src="images/pexels-kevinbidwell-2380795.jpg" class="card-img-top h-100" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Program Director</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Team Member 3 -->
+            <div class="col-md-4 mb-4">
+                <div class="card h-75">
+                    <img src="images/pexels-italo-melo-881954-2379005.jpg" class="card-img-top h-100" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Community Manager</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     </body>
 </html>
