delete uneeded pages

--- a/index.html
+++ b/index.html
@@ -150,5 +150,67 @@
         </div>
     </div>
 </section>
+<section id="donate" class="p-5 bg-warning text-dark">
+    <div class="container">
+        <h2 class="text-center mb-4">Help someone begin their very own <span class="text-success">nature</span> adventure</h2>
+        <div class="row justify-content-center">
+            <!-- Donation Options -->
+             <div class="col-md-6">
+                <img class="img-fluid w-75 d-none d-md-block" src="images/undraw_outdoor-adventure_0xrb.svg" alt="camping">
+             </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title text-center mb-4">Choose Your Donation Amount</h3>
+                        <form action="#" method="POST">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="donationAmount" id="donationAmount1" value="25" checked>
+                                <label class="form-check-label" for="donationAmount1">
+                                    $100 - Sponsor a youth for a day trip
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="donationAmount" id="donationAmount2" value="50">
+                                <label class="form-check-label" for="donationAmount2">
+                                    $200 - Provide outdoor gear for a youth
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="donationAmount" id="donationAmount3" value="100">
+                                <label class="form-check-label" for="donationAmount3">
+                                    $300 - Fund an entire weekend expedition
+                                </label>
+                            </div>
+                            
+                            <div class="form-group mt-4">
+                                <label for="customDonation">Or enter your own amount</label>
+                                <input type="number" class="form-control" id="customDonation" name="customDonation" placeholder="Enter donation amount">
+                            </div>
+
+
+                            <button type="submit" class="btn btn-primary btn-block mt-4">Donate Now!</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact" class="p-5 bg-light text-dark">
+    <div class="container">
+        <h2 class="text-center mb-4">Contact Us</h2>
+        <div class="row">
+            <!-- Contact Information Section -->
+            <div class="col-md-6">
+                <h4>Get in Touch</h4>
+                <p>If you have any questions, feel free to reach out to us using the information below or via our contact form.</p>
+                
+                <ul class="list-unstyled">
+                    <li><strong>Address:</strong> 123 Outdoor Lane, Natureville, CA 90210</li>
+                    <li><strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></li>
+                    <li><strong>Email:</strong> <a href="mailto:info@getoutoftown.org">info@getoutoftown.org</a></li>
+                </ul>
+            </div>
+</section>
     </body>
 </html>
