add contact info

--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
                             <a href="#about" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#service" class="nav-link">Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#questions" class="nav-link">FAQ</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="#donate" class="nav-link">Donate</a>
                         </li>
                         <li class="nav-item">
@@ -196,14 +190,14 @@
         </div>
     </div>
 </section>
-<section id="contact" class="p-5 bg-light text-dark">
+<section id="contact" class="p-5 bg-secondary text-dark">
     <div class="container">
         <h2 class="text-center mb-4">Contact Us</h2>
         <div class="row">
             <!-- Contact Information Section -->
             <div class="col-md-6">
                 <h4>Get in Touch</h4>
-                <p>If you have any questions, feel free to reach out to us using the information below or via our contact form.</p>
+                <p>If you have any questions, feel free to reach out to us using the information below.</p>
                 
                 <ul class="list-unstyled">
                     <li><strong>Address:</strong> 123 Outdoor Lane, Natureville, CA 90210</li>
